add lbph method, create train endpoint
